--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the cart controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.img-size-cart {
+    width: 200px;
+    justify-content: center;
+    height: auto;
+    padding: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
