--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -3,35 +3,43 @@
 </header> 
 <body>
 
-<h2>Your Cart</h2>
 
 
-<table class="row">
-  <thead>
-    <tr>
-      <th></th>
-      <th>Product</th>
-      <th>Description</th>
-      <th>Quantity</th>
-      <th>Price</th>
-      <th>Subtotal</th>
-    </tr>
-  </thead>
 
-<tbody>
-<% current_cart.cart_items.each do |cartitem| %>
-    <tr class="col-md-16">
-      <td><%= link_to image_tag(cartitem.item.images[0]), item_path(cartitem.item.id)  %></td>
-      <td><%= link_to cartitem.item.title, item_path(cartitem.item.id)   %></td>
-      <td><%= cartitem.item.description %></td>
-      <td><%= number_to_currency cartitem.item.price, unit: 'PLN', format: '%n %u' %></td>
-      <td><%= number_to_currency cartitem.item.shipping, unit: 'PLN', format: '%n %u' %></td>
-     
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<main role="main">
+
+ <div class=" bg-light">
+          <p>
+          <h2>Bag</h2>
+          <%=  %>
+          </p>
+        <section class="container ">
+          <div class="column"> 
+            <div class="row">
+             <% current_cart.cart_items.each do |cartitem| %>   
+                    <div class="column index-item-wrapper">
+                            <div class = "image-wrapper">
+                                    <div class="column">
+                                    <%= link_to image_tag(cartitem.item.images[0], class: " img-size-cart"), item_path(cartitem.item.id)  %> <br>
+                                                <div class="item-title-price">
+                                                <%= link_to cartitem.item.title, item_path(cartitem.item.id)%><br>
+                                                <%= cartitem.item.description %><br>
+                                                <%= number_to_currency cartitem.item.price %> <br>
+                                                <%= number_to_currency cartitem.item.shipping %>
+                                                </div>  
+                                     </div>  
+                                    <div class="column edit-delete-index">
+                                    
+                                    <%= button_to "delete", {:controller => :cart_items, :action => 'destroy', :id => cartitem.item.id }, :method => :delete %>
+                                </div>
+                    </div>
+            <%end%>
+                  
+            </div>
+         </div>
+     </section>
+    </div> 
+</main>
 </body>
 
 <%= render 'shared/footer'%> 
-  
