--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -60,12 +60,10 @@
               <%= link_to 'Edit', edit_item_path(@item) %> 
               <% end %>
               </p>  
-              <p>
+              <p>    
               <% unless(current_user && current_user.id && (current_user.id == @item.user_id)) %>
-                    <%= form_for @item, :url => cart_items_path, :html => { :method => :post } do |f|%>
-                    <%= f.hidden_field :item_id, value: @item.id %>
-                    <%= f.submit 'Add to Cart', class: "btn btn-success" %>
-                    <% end %>
+                    
+              <%= link_to "Add to Cart", cart_path(@item), :method => :post %>
               <% end %>  
               </p> 
               <p>
