--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,11 +3,9 @@
 </header> 
 <body>
 <main role="main">      
- <div class=" bg-light">
- <h2>Your Bag</h2>
-              <p> 
-              <%= link_to 'Back To Shopping', items_path, :class => "btn btn-sm btn-outline-secondary" %>
-              </p>
+ <div class=" bg-light">    
+ <h2 class="heading-profile">Your Bag <br><%= link_to 'Back To Shopping', items_path, :class => "btn btn-sm btn-outline-secondary" %></h2>
+            
         <section class="container ">
           <div class="column">  
             <div class="row">
