update show page with stripe key

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -94,7 +94,7 @@ document
   .querySelector("[data-stripe='payment']")
   .addEventListener("click", () => {
     const stripe = Stripe(
-      "<%= Rails.application.credentials.dig(:stripe, :public_key) %>"
+      "<%= ENV['STRIPE_PUBLIC_KEY'] %>"
     );
 
     stripe.redirectToCheckout({
