working on transactions controller

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -90,15 +90,15 @@
   
    
 <script>
-document
-  .querySelector("[data-stripe='payment']")
-  .addEventListener("click", () => {
-    const stripe = Stripe(
-      "<%= ENV['STRIPE_PUBLIC_KEY'] %>"
-    );
+  document
+    .querySelector("[data-stripe='payment']")
+    .addEventListener("click", () => {
+      const stripe = Stripe(
+        "<%= Rails.application.credentials.dig(:stripe, :public_key) %>"
+      );
 
-    stripe.redirectToCheckout({
-      sessionId: "<%= @session_id %>"
+      stripe.redirectToCheckout({
+        sessionId: "<%= @session_id %>"
+      });
     });
-  });
 </script>
