--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -80,7 +80,7 @@ margin-top: 90px;
 }
 
 .home-background {
-  background-image:  url( 'background image.jpeg');
+  background-image:  url( 'https://images.unsplash.com/photo-1525562723836-dca67a71d5f1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80');
   background-size: cover;
 
 }
