transaction model working and configured on user profile and webhook

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,8 +6,14 @@
 <body>
 <main role="main">    
 <div class=" bg-light">
-<h2 class="heading-profile"><%=   @categories %> </h2>
+
         <section class="container item-index-container">
+        <% if current_page?(items_path) %>
+        <h2 class="heading-profile">All Items </h2>
+        <% else current_page?(items_path(category: Category.name))  %>
+        <h2 class="heading-profile"><%=  @items.first.category.name %> </h2>
+
+        <% end %>
        
                   <% @items.each do |item| %>   
                     <div class="column ">        
@@ -17,9 +23,12 @@
                                         <%= image_tag item.images[0], :class => "img-size " %> <br>
                                             <div class="item-title-price">
                                             <%= item.title %>
-                                         
                                             <span><%= number_to_currency(item.price) %></span>
+                                          
                                             </div>  
+                                            <% if item.payment != nil && item.payment.paid == true  %> 
+                                            <p> SOLD</p>
+                                            <% end %>
                                       <% end %>
 
                                     <div class=" btn-group">
