--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -78,11 +78,11 @@ and (-webkit-min-device-pixel-ratio: 1) {
 .home-page-images {
 margin-top: 90px;
 }
-
+      
 .home-background {
   background-image:  url( 'https://images.unsplash.com/photo-1525562723836-dca67a71d5f1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80');
   background-size: cover;
-
+  
 }
 
 .home-main {
@@ -93,7 +93,9 @@ margin-top: 90px;
 
 }
 
-.home-page-buttons {
+.fix-z-index {
+  position: relative;
+  z-index: 0;
 
 }
 
@@ -104,6 +106,7 @@ margin-top: 90px;
 .marketing .col-lg-4 {
   margin-bottom: 1.5rem;
   text-align: center;
+ 
 }
 .marketing h2 {
   font-weight: 400;
