--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -57,22 +57,27 @@
                 <strong>Shipping: </strong>    
                 <%= number_to_currency(@item.shipping)%>
               </p>
-              
-              <p>  
-              <% if(current_user && current_user.id && (current_user.id == @item.user_id)) %>
-              <%= link_to 'Edit', edit_item_path(@item), :class => "btn btn-sm btn-outline-secondary" %> 
-              <% end %>
-              </p>  
-              <p> 
-              <%= link_to 'Back', items_path, :class => "btn btn-sm btn-outline-secondary" %>
-              </p>
-              <p>    
-              <% unless(current_user && current_user.id && (current_user.id == @item.user_id)) %>
-              <%= link_to "Save to Bag", cart_path(@item), :method => :post, :class => "btn btn-outline-secondary " %>
-              <button class=" btn btn-outline-secondary" data-stripe="payment">
-              Buy Now
-              </button>
-              <% end %>  
+
+              <% if @item.payment != nil && @item.payment.paid == true  %> 
+                 <p>SOLD</p>
+                <% else %> 
+                    <p>  
+                    <% if(current_user && current_user.id && (current_user.id == @item.user_id)) %>
+                    <%= link_to 'Edit', edit_item_path(@item), :class => "btn btn-sm btn-outline-secondary" %> 
+                    <% end %>
+                    </p>  
+                    <p> 
+                    <%= link_to 'Back', items_path, :class => "btn btn-sm btn-outline-secondary" %>
+                    </p>
+                    <p>    
+                    <% unless(current_user && current_user.id && (current_user.id == @item.user_id)) %>
+                    <%= link_to "Save to Bag", cart_path(@item), :method => :post, :class => "btn btn-outline-secondary " %>
+                    <button class=" btn btn-outline-secondary" data-stripe="payment">
+                    Buy Now
+                    </button>
+                    <% end %>   
+
+              <% end %> 
               </p>      
               
               
