--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,9 +4,9 @@
 </header> 
 <body>     
 <main role="main" class = "home-main">
-
-  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-left home-background">
-  <div class="col-md-5 p-lg-5 mx-auto my-5 float-left card mb-3">
+<div class=" bg-light ">
+  <div class="overflow-hidden p-3 p-md-5 m-md-3 text-left home-background">
+  <div class="col-md-5 p-lg-5 mx-auto my-5 float-left card mb-3  ">
     <h1 class="display-4 font-weight-normal">Buy. Sell. Thrift.</h1>
     <p class="lead font-weight-normal">Preloved, Vintage, Street Style, Designer and more.</p>
     <p>
@@ -20,57 +20,31 @@
   <hr class="featurette-divider">
   <div class="container marketing ">
 
-    <div class="row">
+    <div class="row fix-z-index">
       <div class="col-lg-4 ">
-      <img src='https://images.unsplash.com/photo-1519220279207-fddf068f2141?ixlib=rb-1.2.1&auto=format&fit=crop&w=635&q=80' class="bd-placeholder-img rounded-circle" alt="..." width="140" height="140">
+      <img src='https://images.unsplash.com/photo-1519220279207-fddf068f2141?ixlib=rb-1.2.1&auto=format&fit=crop&w=635&q=80' class="bd-placeholder-img rounded-circle " alt="..." width="140" height="140">
       <h2>What?</h2>
         <p>Your Thrift Co. is an online marketplace for buying, selling and personal trend setting.    </p>
         <p><%= link_to "Get Started Today", new_user_session_path, class: "btn btn-outline-secondary"%></p>
-      </div><!-- /.col-lg-4 -->
+      </div>
       <div class="col-lg-4">
       <img src='https://images.unsplash.com/photo-1527519124254-9dafd8b3533b?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80' class="bd-placeholder-img rounded-circle" alt="..." width="140" height="140">
       <h2>How?</h2>
         <p>Need help getting started?</p>
         <p><%= link_to "Sell now", new_user_session_path, class: "btn btn-outline-secondary"%></p>
-      </div><!-- /.col-lg-4 -->
+      </div>
       <div class="col-lg-4">
       <img src='https://images.unsplash.com/photo-1574279606130-09958dc756f7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80' class="bd-placeholder-img rounded-circle" alt="..." width="140" height="140">
         <h2>Why?</h2>
         <p>Reduce, Reuse, Recycle. Your Thrift Co. is a platform where we can change fashion idealism. Promote less waste, set new unique trends and form a fashion community.</p>
         <p><%= link_to "Find Out More", about_path, class: "btn btn-outline-secondary"%></p>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
-
-    <hr class="featurette-divider">     
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">Find your style. <span class="text-muted">It’ll blow your mind.</span></h2>
-        <p class="lead"></p>
-        <p><%= link_to "Search for Style", new_user_session_path, class: "btn btn-outline-secondary"%></p>
-      </div>
-      <div class="col-md-5">
-      <img src='https://images.unsplash.com/photo-1583174435088-0e52c15b1c36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1049&q=80' class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto home-page-images" alt="..." width="500" height="500" >
       </div>
     </div>
 
+    
     <hr class="featurette-divider">
-
-    <div class="row featurette ">
-      <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-        <p class="lead"></p>
-        <p><%= link_to "Start Today", new_user_session_path, class: "btn btn-outline-secondary"%></p>
-        </div>
-  
-      <div class="col-md-5 order-md-1">
-      <img src='https://images.unsplash.com/photo-1583396726704-988433ebd0fe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=658&q=80' class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto home-page-images" alt="..." width='500' height='500'>
-      
-      </div>
     </div>
-
-    <hr class="featurette-divider">
     </main> 
-  </div>
+
   </body>
   <%= render 'shared/footer'%> 
