--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,19 +1,27 @@
+
+
 <header>
 <%= render 'shared/nav'%>  
 </header> 
 <body>
 <main role="main">    
-<div class=" bg-light">
-<h1>Edit Item</h1>
+        <div class=" bg-light">
 
-<%= render 'form', item: @item %>
 
-<%= link_to 'Show', @item %> |
-<%= link_to 'Back', items_path %>
-</div>
-</div> 
-</div>  
+                <div class = "container new-container">
+                <h2 class="heading-profile "> Edit Item</h2>
+
+                        <div class = "form-width">
+                        <%= render 'form', item: @item %>
+
+
+                        <%= link_to 'Show', @item %> |
+                        <%= link_to 'Back', items_path %>
+                        </div>
+                </div>      
+        </div>  
 </main>
 </body>
  
 <%= render 'shared/footer'%> 
+
