--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -3,19 +3,19 @@
 </header> 
 <body>
 <main role="main">    
-<div class=" bg-light">
+        <div class=" bg-light">
 
 
-<div class = "container new-container">
-<h1>New Item</h1>
+                <div class = "container new-container">
+                <h2 class="heading-profile "> List New Item</h2>
 
-<div>
-<%= render 'form', item: @item %>
+                        <div class = "form-width">
+                        <%= render 'form', item: @item %>
 
-<%= link_to 'Back', items_path %>
-</div>
-</div>      
-</div>  
+                        <%= link_to 'Back', items_path %>
+                        </div>
+                </div>      
+        </div>  
 </main>
 </body>
  
