--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,54 +23,78 @@
     </div> 
 
 <hr class="featurette-divider">
-   
+<h2 class="heading-profile "> My Listings</h2>   
 <div class="bg-light">
-<h2 class="heading-profile "> My Listings</h2>
-        <section class="container item-index-container">
-        <% @user.items.each do |item| %>
-                    <div class="column ">
-                    <%= link_to item do %>
-                        <div class = "index-item-wrapper">
-                                <div class="column">
-                                <%= image_tag item.images[0], :class => "img-size" %> <br>
-                                            <div class="item-title-price">
-                                            <%= item.title %><br>
-                                            <span><%= number_to_currency(item.price) %></span>
-                                            </div>  
-                                      <% end %>
 
-                                    <div class=" btn-group">
-                                    <% if(current_user && current_user.id && (current_user.id == item.user_id)) %>
-                                    <%= link_to 'Edit', edit_item_path(item), :class => "btn btn-sm btn-outline-secondary" %> 
-                                    <%= link_to 'Delete', item, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-sm btn-outline-secondary" %> 
-                                    <% end %>
-                                </div>
-                              </div>
-                        </div>
-                      </div>
-                  <%end%>    
-        </section>
-        <h2 class="heading-profile "> My Purchases</h2>
-        <section class="container item-index-container">
-        <div class="column ">
-                <% if user_signed_in? && current_user.buyer_payments.any? %>
-                <div class = "index-item-wrapper">
-                <div class="column">
-                        <% @bought_items.each do |bought_items| %>
-                            <%= image_tag bought_items.images[0], :class => "img-size" %> <br>
-                            <%= bought_items.title %><br>
-                            <span><%=number_to_currency(bought_items.price)  %></span>
-                        <% end %>
-                    </div>
-                </div>
-                <% end %>         
         
-            </div> 
+<% if @user.items.empty?  %>
+<h4>No Listings </h4>
+<%else%>
+                <section class="container item-index-container">
+                        
+                <div class="row">
+                <% @user.items.each do |item| %>
+                            <div class=" column index-item-wrapper"> 
+                                        <div class = "image-wrapper ">
+                                                
+                                                <%= link_to item do %>
+                                                    <%= image_tag item.images[0], :class => "img-size" %> <br>
+                                                                <div class="item-title-price">
+                                                                <%= item.title %><br>
+                                                            
+                                                                <span><%= number_to_currency(item.price) %> </span> <br>
+                                                                
+                                                                </div>  
+                                                    <% end %>
+                                                
+                                                
+                                                    <div class="btn-group remove-buy-cartitem">
+                                                    <% if(current_user && current_user.id && (current_user.id == item.user_id)) %>
+                                                    <%= link_to 'Edit', edit_item_path(item), :class => "btn btn-sm btn-outline-secondary" %> 
+                                                    <%= link_to 'Delete', item, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-sm btn-outline-secondary" %> 
+                                                    <% end %>
+                                                    </div>
+                                                    
+                                            </div>   
+                            </div>   
+                    <%end%>
+                </div>
+            </section>
+<%end%>
+
+<hr class="featurette-divider">
+<h2 class="heading-profile "> My Purchases</h2>
+
+<% if @bought_items.empty?  %>
+<h4>No Purchases </h4>
+<%else%>
+        <section class="container item-index-container">
+        <div class="row">
+                <% if user_signed_in? && current_user.buyer_payments.any? %>
+                    <% @bought_items.each do |bought_items| %>
+                        <div class=" column index-item-wrapper"> 
+                            <div class = "image-wrapper ">
+                                        <%= image_tag bought_items.images[0], :class => "img-size" %> <br>
+                                            <div class="item-title-price">
+                                            <%= bought_items.title %><br>
+                                            <%=number_to_currency(bought_items.price)  %>
+                                            </div>
+                      
+                            </div>
+                        </div>
+                <% end %>
+            
+        </div> 
+        <% end %>     
         </section>
+<%end%>
+
+
+
       </div> 
     </main>
 </body>
 
 <%= render 'shared/footer'%> 
 
-
+       
