--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,6 +1,6 @@
 $alternate-color: #F4DBDB;
-$heading-color: #a88a72;
-$hover-color: brown;
+$heading-color: #817878;   
+$hover-color: black;
 $text-color: black; 
 $background-2nd-color: rosybrown;
 $white-color: white;
