--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -27,8 +27,8 @@
                                         
                                         
                                               <p class = "remove-buy-cartitem">  
-                                                      <%= link_to 'Remove', delete_item_path(cartitem), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-secondary" %>   
-                                                      <%= link_to 'Buy Item', item_path(cartitem.item), class: "btn btn-outline-secondary" %>   
+                                                      <%= link_to 'Remove', delete_item_path(cartitem), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-outline-secondary" %>   
+                                                      <%= link_to 'Buy Item', item_path(cartitem.item), class: "btn btn-sm btn-outline-secondary" %>   
                                               </p>
                                             
                                     </div>   
