--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,72 +2,106 @@
 <%= render 'shared/nav'%>  
 </header> 
 <body>   
-<main class="main-user-container">   
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<main >  
+<div class="border-form-div"> 
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
-   
-  
-  <%= f.input :username,
-                  required: true,
-                  autofocus: true,  
-                  input_html: { autocomplete: "username" }, placeholder: 'username' %>
-  </div>
-    <%= f.input :name,
-                  required: false, 
-                  autofocus: true,
-                  input_html: { autocomplete: "name" }, placeholder: 'name' %>
-    <%= f.input :email, required: true, autofocus: true %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+    <h3>Edit <%= resource_name.to_s.humanize %></h3>
+
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+
+      <div class="field form-group">
+        <%= f.label :username %><br/>
+        <%= f.text_field :username, autocomplete: "username",
+         :class => "form-control" %>
+      </div>
+
+      <div class="field form-group">
+        <%= f.label :name %><br/>
+        <%= f.text_field :name, autofocus: true, autocomplete: "name",
+        :class => "form-control" %>
+        </div>
+
+        <div class="field form-group">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email",
+        :class => "form-control" %> 
+      </div>
+
+      <div class="field form-group">
+        <%= f.label :Address %><br />
+        <%= f.text_field :address, autofocus: true, input_html: { autocomplete: "address" },
+        :class => "form-control" %> 
+      </div>
+
+      <div class="field form-group">
+        <%= f.label :City %><br />
+        <%= f.text_field :city, autofocus: true, input_html: { autocomplete: "city" },
+        :class => "form-control" %>
+      </div>
+
+      <div class="field form-group">
+        <%= f.label :State %><br />
+        <%= f.text_field :state, autofocus: true, input_html: { autocomplete: "state" },
+        :class => "form-control" %> 
+      </div>
+
+      <div class="field form-group">
+      <%= f.label :post_code %><br />
+      <%= f.text_field :post_code, autofocus: true, input_html: { autocomplete: "post_code" },
+      :class => "form-control" %> 
+    </div>
+
+    <div class="field form-group">
+      Profile Picture<br/>
+      <%= f.file_field :avatar,
+      :class => "form-control" %> 
+      </div>
+
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
+
+      <div class="field form-group">
+        <%= f.label :password %> <i>(leave blank if you do not want to change it)</i><br/>
+        <%= f.password_field :password, autocomplete: "new-password",
+        :class => "form-control" %> 
+          <% if @minimum_password_length %>
+            <br/>
+            <em><%= @minimum_password_length %> characters minimum</em>
+          <% end %>
+      </div>
+
+      <div class="field form-group">
+        <%= f.label :password_confirmation %><br/>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password",
+        :class => "form-control" %> 
+      </div>
+
+      <div class="field form-group">
+        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br/>
+        <%= f.password_field :current_password, autocomplete: "current-password",
+        :class => "form-control" %> 
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Update your Account" , :class => "btn btn-secondary"%>
+      </div>
     <% end %>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
-  <div class=”field”> Profile Picture
-  <%= f.file_field :avatar %> </div>
-  <%= f.input :address,
-                required: false,
-                autofocus: true,
-                input_html: { autocomplete: "address" } %>
-  <%= f.input :city,
-                required: false,
-                autofocus: true,
-                input_html: { autocomplete: "city" } %> 
-  <%= f.input :state,
-                required: false,
-                autofocus: true,
-                input_html: { autocomplete: "state" } %> 
-  <%= f.input :post_code,
-                required: false,
-                autofocus: true,
-                input_html: { autocomplete: "post_code" }, placeholder: '0000' %>                   
-     </div>
-  </div>
+<div class = "cancel">
+<h4>Cancel my account</h4>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class => "btn btn-sm btn-outline-secondary" %></p>
+</div>
+<%= link_to "Back", :back, :class => "btn btn-sm btn-outline-secondary" %>
 
-<h3>Cancel my account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
 </main>
 </body>
 
 <%= render 'shared/footer'%> 
+
 
