--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,45 +3,56 @@
 <%= render 'shared/nav'%>  
 </header>    
 <body >
-<main class="main-user-container">  
-<div >
-  <h1>Sign up</h1>
-    
-     
-  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= f.error_notification %>
-      
-    <div class="form-inputs">        
-    <%= f.input :username,
-                  required: true,
-                  autofocus: true,
-                  input_html: { autocomplete: "username" }, placeholder: 'username' %>
-    <%= f.input :name,
-                  required: true,
-                  autofocus: true,
-                  input_html: { autocomplete: "name" }, placeholder: 'name' %>
-      <%= f.input :email,
-                  required: true,
-                  autofocus: true,
-                  input_html: { autocomplete: "email" }, placeholder: 'Email' %>
-      <%= f.input :password,
-                  required: true,
-                  hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                  input_html: { autocomplete: "new-password" }, placeholder: 'Password' %>
-      <%= f.input :password_confirmation,
-                  required: true,
-                  input_html: { autocomplete: "new-password" } %>
-    </div>
 
-    <div class="form-actions user-form-button-1">
-      <%= f.button :submit, "Sign up", :class => 'submit-button'  %>
-    </div>
-  <% end %>
-    <div class="user-form-button">
-    
-      <%= render "devise/shared/links" %>
+<main>  
+<div class="border-form-div"> 
+
+    <h3>Sign up</h3>
+
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+
+      <div class="field form-group">
+        <%= f.label :username %><br/>
+        <%= f.text_field :username, autocomplete: "username",
+         :class => "form-control" %>
       </div>
-<div>
+
+       <div class="field form-group">
+        <%= f.label :name %><br/>
+        <%= f.text_field :name, autofocus: true, autocomplete: "name",
+        :class => "form-control" %>
+        </div>
+
+        <div class="field form-group">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email",
+        :class => "form-control" %> 
+        </div>
+
+        <div class="field form-group">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br/>
+          <%= f.password_field :password, autocomplete: "new-password" %>
+       </div>
+
+      <div class="field form-group">
+       <%= f.label :password_confirmation %><br/>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password",
+        :class => "form-control" %> 
+      </div>
+
+
+      <div class="actions">
+        <%= f.submit "Create an Account" , :class => "btn btn-secondary"%>
+      </div>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
+</div>
 </main>
 </body>
 <%= render 'shared/footer'%> 
+
