--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -4,36 +4,23 @@
 </header>
 <body>
            <main>
-                    <section class = "core-container">
-                        <div class = "core-child"> 
-                                <h2 class = "page-headings" >Contact<span>.</span><br><b>Get in touch</b></h2>
-                                    <div class = "core-info-content">
-                                    <div class = "form-group">
-                                    <!-- https://mailthis.to/-->
-                                        <form accept-charset="UTF-8" action="" method="POST" id="email-form">
-                                        <div class="form-group row">  
-                                            <label for="name" >Name:</label>
-                                            <input   type="text" name="name" placeholder="Your name..." id="name">
-                                        </div>
-                                        <div class="form-group row"> 
-                                            <label for="_replyto" >Email:</label>
-                                            <input  type="text" name="_replyto" placeholder="Your email..." id="_replyto">
-                                        </div>
-                                        <div class="form-group row"> 
-                                            <label for="message" >Message:</label>
-                                            <textarea  name="message" placeholder="Enter your message here..." id="message"></textarea>
-                                        </div>
-                                        <div class="form-group row"> 
-                                            <input type="hidden" name="_subject" value="abc">
-                        
-                                            <input type="hidden" name="_after" value="contact.html"/>
-                        
-                                            <input type="submit" value="Send" >
-                                        </form>
-                            </div>
-                          </div>
-                        </div>
-                    </section>
+           <section class = "core-container">
+           <div class = "core-child"> 
+                   <h2 class = "page-headings">Contact<span>.</span><br><b>Contact Page</b></h2>
+                   <div class = "core-child" >
+                       <div class = "core-info-content"> 
+                           
+                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin euismod tempus libero non facilisis. Integer sagittis, risus a eleifend tincidunt, quam est egestas sapien, tincidunt congue purus felis ut dolor. Aenean tristique feugiat arcu id dapibus. Praesent dignissim lacus suscipit felis suscipit, quis laoreet magna rhoncus. Ut purus ipsum, euismod non turpis ac, malesuada aliquam ex. Integer ultricies consequat ultrices. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed sit amet posuere purus. Nullam eu tristique nisi, non viverra nunc. Donec non efficitur elit. Aenean lacus neque, lobortis id elementum a, porta vitae lectus. Mauris non ante vel justo luctus condimentum et in magna. Cras sit amet laoreet elit, dapibus convallis enim. Nullam in placerat libero.</p>
+                           <br>
+                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin euismod tempus libero non facilisis. Integer sagittis, risus a eleifend tincidunt, quam est egestas sapien, tincidunt congue purus felis ut dolor. Aenean tristique feugiat arcu id dapibus. Praesent dignissim lacus suscipit felis suscipit, quis laoreet magna rhoncus. Ut purus ipsum, euismod non turpis ac, malesuada aliquam ex. Integer ultricies consequat ultrices. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed sit amet posuere purus. Nullam eu tristique nisi, non viverra nunc. Donec non efficitur elit. Aenean lacus neque, lobortis id elementum a, porta vitae lectus. Mauris non ante vel justo luctus condimentum et in magna. Cras sit amet laoreet elit, dapibus convallis enim. Nullam in placerat libero.</p>
+                           <br>
+                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin euismod tempus libero non facilisis. Integer sagittis, risus a eleifend tincidunt, quam est egestas sapien, tincidunt congue purus felis ut dolor. Aenean tristique feugiat arcu id dapibus. Praesent dignissim lacus suscipit felis suscipit, quis laoreet magna rhoncus. Ut purus ipsum, euismod non turpis ac, malesuada aliquam ex. Integer ultricies consequat ultrices. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed sit amet posuere purus. Nullam eu tristique nisi, non viverra nunc. Donec non efficitur elit. Aenean lacus neque, lobortis id elementum a, porta vitae lectus. Mauris non ante vel justo luctus condimentum et in magna. Cras sit amet laoreet elit, dapibus convallis enim. Nullam in placerat libero.</p>
+                           <br>
+                           
+                       </div>
+                   </div>
+           </div>
+           </section>
                 </main>
 </body>
 <%= render "shared/footer" %>
