--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 
 <!-- FOOTER -->
-<footer class="container footer mt-auto py-3">
+<footer class="container footer mt-auto py-3 main-footer">
 <p class="float-right "><a href="#">Back to top</a></p>
   <p>&copy; Shelby El-rassi 2020 
   &middot; <%= link_to("About", about_path)%> 
