--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -60,7 +60,8 @@
     </div>
 
     <a class="navbar-brand" href="/">YOUR THRIFT CO.</a>
-    <%= link_to mycart_path do %>
+    
+    <%= link_to mycart_path, :class => "shop-bag"  do%>
     <i class="fas fa-shopping-bag"></i>  
     <% end %>
 </nav>
