--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 </header> 
 <body>
 
-<main>
+<main>    
 <div class = "main-container">
         <% if @user.avatar.attached? %>
             <%= image_tag @user.avatar, class: "img-fluid avatar-img" %>
@@ -17,7 +17,7 @@
              <%= @user.email %>
             <% end %>
         <% if(current_user && current_user.id && (current_user.id == @user.id)) %>
-        <%= link_to "Edit Profile", edit_user_registration_path %> 
+        <%= link_to "Edit Profile", edit_user_registration_path, :class => "btn btn-sm btn-outline-secondary" %> 
         <% end %>
     </div>  
     </div> 
