--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,7 +6,7 @@
 <main>
         <section class = "core-container">
         <div class = "core-child"> 
-                <h2 class = "page-headings">About<span>.</span><br><b>abc </b></h2>
+                <h2 class = "page-headings">Story<span>.</span></h2>
                 <div class = "core-child" >
                     <div class = "core-info-content"> 
                         
@@ -23,7 +23,7 @@
         </section>
 
 </main>
-</body>
+</body>    
 
 
 <%= render "shared/footer" %>
