--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -6,7 +6,7 @@
            <main>
            <section class = "core-container">
            <div class = "core-child"> 
-                   <h2 class = "page-headings">Contact<span>.</span><br><b>Contact Page</b></h2>
+                   <h2 class = "page-headings">Get In Touch<span>.</span><br></h2>
                    <div class = "core-child" >
                        <div class = "core-info-content"> 
                            
