--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -7,7 +7,7 @@
 <main>
         <section class = "core-container">
         <div class = "core-child"> 
-                <h2 class = "page-headings">Privacy<span>.</span><br><b>abc </b></h2>
+                <h2 class = "page-headings">Privacy Policy<span>.</span><br></h2>
                 <div class = "core-child" >
                     <div class = "core-info-content"> 
                         
