--- a/app/views/pages/support.html.erb
+++ b/app/views/pages/support.html.erb
@@ -6,7 +6,7 @@
 <main>
         <section class = "core-container">
         <div class = "core-child"> 
-                <h2 class = "page-headings">Support<span>.</span><br><b>abc </b></h2>
+                <h2 class = "page-headings">Questions?<span>.</span><br></h2>
                 <div class = "core-child" >
                     <div class = "core-info-content"> 
                         
