--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -7,7 +7,7 @@
 <main>
         <section class = "core-container">
         <div class = "core-child"> 
-                <h2 class = "page-headings">Terms<span>.</span><br><b>abc </b></h2>
+                <h2 class = "page-headings">Terms<span>.</span><br></h2>
                 <div class = "core-child" >
                     <div class = "core-info-content"> 
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin euismod tempus libero non facilisis. Integer sagittis, risus a eleifend tincidunt, quam est egestas sapien, tincidunt congue purus felis ut dolor. Aenean tristique feugiat arcu id dapibus. Praesent dignissim lacus suscipit felis suscipit, quis laoreet magna rhoncus. Ut purus ipsum, euismod non turpis ac, malesuada aliquam ex. Integer ultricies consequat ultrices. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed sit amet posuere purus. Nullam eu tristique nisi, non viverra nunc. Donec non efficitur elit. Aenean lacus neque, lobortis id elementum a, porta vitae lectus. Mauris non ante vel justo luctus condimentum et in magna. Cras sit amet laoreet elit, dapibus convallis enim. Nullam in placerat libero.</p>
