--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,7 +69,7 @@ main {
 
 }
 
-.btn:hover , .btn-group a.btn:hover {
+.btn:hover , .btn-group a.btn:hover, .remove-buy-cartitem a.btn:hover{
    background-color: gray !important;
    color: #CDC382 !important;
 }
@@ -80,24 +80,20 @@ main {
    font-family: $heading-font-family;
    font-weight: 600;
    font-size: 3rem;
+   
 }
 .page-headings span {
-   color: $heading-color;
-   font-size: 2rem;
+   color: #CDC382 !important;
+   font-size: 3rem;
 }  
-.page-headings b {
-   display: block;
-   font-size: 0.9rem;
-   color: $heading-color;
-   font-family: $heading-font-family;
-}
+
 /*****CORE FOR MOST PAGE FORMATTING******/
 .core-container { 
    display: flex;
    flex-flow: row wrap;
    padding: 0;   
    margin: 0;
-   margin-top: 250px; 
+   margin-top: 100px; 
    margin-bottom: 100px;
 }
     
