--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,24 +3,25 @@
 <%= render 'shared/nav'%>  
 </header> 
 <body>     
-<main role="main" class = "home-main">
-<div class=" bg-light ">
+<main  class = "home-main">
+
   <div class="overflow-hidden p-3 p-md-5 m-md-3 text-left home-background">
-  <div class="col-md-5 p-lg-5 mx-auto my-5 float-left card mb-3  ">
-    <h1 class="display-4 font-weight-normal">Buy. Sell. Thrift.</h1>
-    <p class="lead font-weight-normal">Preloved, Vintage, Street Style, Designer and more.</p>
-    <p>
-    <%= link_to 'Sign up today', new_item_path , class: "btn btn-lg btn-outline-secondary home-page-buttons " %>
-    </p>
-  </div>      
-  <div class="product-device shadow-sm d-none d-md-block "></div>
-  <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+      <div class="container card-container">
+        <h1 class="display-3">Buy. Sell. Thrift.</h1>
+        <p>Preloved, Vintage, Street Style, Designer and more.</p>
+        <p>  <%= link_to 'Sign up today', new_item_path , class: "btn btn-lg btn-outline-secondary home-page-buttons " %></p>
+      </div>
   </div>
 
+
+
+
   <hr class="featurette-divider">
+
+  
   <div class="container marketing ">
 
-    <div class="row fix-z-index">
+    <div class="row">
       <div class="col-lg-4 ">
       <img src='https://images.unsplash.com/photo-1519220279207-fddf068f2141?ixlib=rb-1.2.1&auto=format&fit=crop&w=635&q=80' class="bd-placeholder-img rounded-circle " alt="..." width="140" height="140">
       <h2>What?</h2>
@@ -43,7 +44,7 @@
 
     
     <hr class="featurette-divider">
-    </div>
+  </div>
     </main> 
 
   </body>
