--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -16,7 +16,7 @@
                                   <div class = "image-wrapper ">
                                         
                                             <%= link_to cartitem.item do %>
-                                            <%= image_tag(cartitem.item.images[0], class: " img-size-cart")%> <br>
+                                            <%= image_tag(cartitem.item.images[0], class: " img-size-cart")%> 
                                                         <div class="item-title-price">
                                                         <%= cartitem.item.title %><br>
                                                     
