--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,13 +38,13 @@
                                         <div class = "image-wrapper ">
                                                 
                                                 <%= link_to item do %>
-                                                    <%= image_tag item.images[0], :class => "img-size" %> <br>
+                                                    <%= image_tag item.images[0], :class => "img-size" %> 
                                                                 <div class="item-title-price">
                                                                 <%= item.title %><br>
                                                             
-                                                                <span><%= number_to_currency(item.price) %> </span> <br>
+                                                                <span><%= number_to_currency(item.price) %> </span> 
                                                                 
-                                                                </div>  
+                                                                </div>   
                                                     <% end %>
                                                 
                                                 
