--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -27,17 +27,17 @@
                                   <div class = "image-wrapper ">
                                         
                                         <%= link_to item do %>
-                                          <%= image_tag item.images[0], :class => "img-size " %> <br>
+                                          <%= image_tag item.images[0], :class => "img-size " %> 
                                                         <div class="item-title-price">
                                                         <%= item.title %><br>
                                                     
-                                                        <span><%= number_to_currency(item.price) %></span> <br>
+                                                        <span><%= number_to_currency(item.price) %></span> 
                                                         </div>  
                                             <% end %>
                                         
                                         
                                           
-                                              <div class=" btn-group">
+                                              <div class="btn-group">
                                               <% if(current_user && current_user.id && (current_user.id == item.user_id)) %>
                                               <%= link_to 'Edit', edit_item_path(item), :class => "btn btn-sm btn-outline-secondary" %> 
                                               <%= link_to 'Delete', item, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-sm btn-outline-secondary" %> 
