--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,11 +64,28 @@ main {
    margin-top: 50px;
 }
 
-
 .btn:hover , .btn-group a.btn:hover, .remove-buy-cartitem a.btn:hover{
    background-color: gray !important;
    color: #CDC382 !important;
-}
+}  
+
+
+ /*****Title headings FOR EACH PAGE FORMATTING******/
+.heading-profile {
+   background-color: #CDC382 !important;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   width: 30%;
+   height: 100px;
+   text-align: center;
+   vertical-align: middle;
+   line-height: 100px; 
+   border-radius: 10px;
+   font-size: 1.2rem;
+   text-transform: uppercase;
+   }
+
 
  /*****HEADINGS FOR EACH PAGE FORMATTING******/
  .page-headings {
@@ -76,6 +93,7 @@ main {
    font-family: $heading-font-family;
    font-weight: 600;
    font-size: 3rem;
+  
    
 }
 .page-headings span {
