--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -36,8 +36,7 @@
                                             <% end %>
                                         
                                         
-                                          
-                                              <div class="btn-group">
+                                              <div class = "buttons-other" >
                                               <% if(current_user && current_user.id && (current_user.id == item.user_id)) %>
                                               <%= link_to 'Edit', edit_item_path(item), :class => "btn btn-sm btn-outline-secondary" %> 
                                               <%= link_to 'Delete', item, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-sm btn-outline-secondary" %> 
@@ -45,7 +44,7 @@
                                             </div> 
                                             
                                     </div>   
-                    </div>   
+                    </div>      
             <%end%>
       </div>
 </section>
