--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,6 +1,4 @@
-<header>
-<%= render 'shared/nav'%>  
-</header> 
+
 <body>
 <main role="main">    
 <h2 class="heading-profile "> List New Item</h2>
@@ -13,11 +11,11 @@
                         <div class = "form-width">
                         <%= render 'form', item: @item %>
 
-                        <%= link_to 'Back', items_path %>
+                        <%= link_to 'Back', items_path, :class => "btn btn-sm btn-outline-secondary" %>
                         </div>
                 </div>      
         </div>  
 </main>
 </body>
  
-<%= render 'shared/footer'%> 
+
